[tool.poetry]
name = "poetry_demo_project_1"
version = "0.1.0"
description = ""
authors = ["Hugo Hjertén <hugo.hjerten@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"
scipy = "^1.4.1"
tensorflow = "^2.1.0"
tensorflow-text = "^2.1.1"
matplotlib = "^3.2.0"
scikit-learn = "^0.22.2"
jupyter = "^1.0.0"
ipykernel = "^5.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
